# JStockfish

./: .gitignore  allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  engine-interface.txt  help-doc.html  index-all.html  index.html  overview-tree.html  package-list
jni/: .gitignore  CMakeLists.txt  Readme.md
jni/src/main/cpp/: jstockfish.cpp  jstockfish.h  jstockfish_Uci.cpp  misc.patch
jni/src/main/java/jstockfish/: OutputListener.java  Position.java  Scores.java  State.java  Uci.java
jstockfish/: OutputListener.html  Position.html  State.html  Uci.html  package-frame.html  package-summary.html  package-tree.html
src/: .gitignore  Makefile  bitboard.h  evaluate.cpp  evaluate.h  evaluate_trace.cpp  evaluate_trace.h  misc.cpp  misc.h  position.cpp  position.h  positionstate.cpp  positionstate.h  search.cpp  ucioption.cpp
